feat(be) #146 : search with category
